[gd_scene load_steps=5 format=3 uid="uid://7b3lqbfmurge"]

[ext_resource type="Script" uid="uid://c0qug8j6apbkq" path="res://scripts/enemy_bullet_basic.gd" id="1_y25gk"]
[ext_resource type="Texture2D" uid="uid://bx2fgybhgfttv" path="res://assets/sprites/enemy_bullet_round.png" id="2_2rw7y"]
[ext_resource type="AudioStream" uid="uid://cpetwhpn0xt3a" path="res://assets/sounds/laser-312360.mp3" id="3_l5glv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y25gk"]
radius = 4.0

[node name="EnemyBulletRound" type="Area2D"]
collision_layer = 8
script = ExtResource("1_y25gk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2rw7y")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y25gk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, 0)
scale = Vector2(0.5, 0.5)

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_l5glv")
volume_db = -60.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
